# fc-bootloader

./: .gitignore  Kconfig  Makefile  README.md  meson.build  meson_options.txt  tmp_link.ld
.github/workflows/: tests.yml
src/: .gitignore  main.c
src/arch/: Kconfig
src/arch/arm/: Kconfig  vector.c
src/arch/arm/include/: vector.h
src/boards/samrh71_ek/: samrh71_ek_defconfig
src/boards/samv71_xult_ek/: samv71_xult_ek_defconfig
src/common/: command.c  console.c  crc.c  sll.c  system.c
src/common/moon/: codec.c  server.c  transport_usart.c
src/common/services/: bootloader.c
src/drivers/: flash.c  rh71_flash.c  rh71_pmc.h  rh71_usart.c  rh71_watchdog.c  v71_flash.c  v71_pio.h  v71_usart.c  v71_usart.h  v71_watchdog.c  x71_usart.c
src/include/: .gitignore  command.h  common.h  crc.h  flash.h  printf_config.h  rh71_flash.h  rh71_pio.h  rh71_usart.h  sll.h  system.h  usart.h  watchdog.h
src/include/moon/: codec.h  common.h  moon_config.h  server.h  transport.h
src/include/moon/services/: bootloader.h
src/soc/: Kconfig
src/soc/arm/atmel_sam/: Kconfig  Kconfig.soc
src/soc/arm/atmel_sam/samrh71/: Kconfig.series  Kconfig.soc
src/soc/arm/atmel_sam/samv71/: Kconfig.series  Kconfig.soc
tools/: atsamv71q21_bl.ld  atsamx71_bl.ld  bl_test.py  blcli.py  bootload.py  bootloader.erpc  framework.mk  kconfig.py  msg.py  requirements.txt  rh71_reg.gdb  samrh71.cfg
tools/bootloader/: __init__.py  client.py  common.py  interface.py  moon_codec.py  moon_transport.py  server.py
tools/erpc/: client.py  codec.py
tools/meson/: gcc-arm-cortex-m7.txt
